2012-06-18 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/auth/ldap.php, include/javascript/pandora.js,
	include/functions_incidents.php: cleaned source code style.
	
	* include/functions_users.php, operation/users/webchat.php: a lot of
	fixes, the "error connection" don't appear when timeout the
	connection for to get new messages, fixed empty messages, and
	fixed when make freak actions with user connect in webchat for
	example delete. And the most important the chat files (logs and
	others) now Pandora save this files in attachment dir instead the
	tmp system dir.
	
	* godmode/users/user_list.php: added to call to delete from the
	chat user list when delete a user.
	
	MERGED from 4.0.2

2012-06-18 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_html.php
	 godmode/agentes/module_manager_editor_common.php: Modified width
	 of module type select in module editor when you are 
	 editing/creating a network module.
	 
	* include/functions.php
	 godmode/reporting/visual_console_builder.php: Fixed autorefresh
	 functionality.

	* include/functions_ui.php
	 godmode/massive/massive_edit_modules.php 
	 operation/agentes/ver_agente.php: Several Php warnings
	 fixed over console code.

	* godmode/reporting/reporting_builder.list_items.php: Fixed broken 
    view due to a bad sintax statement.

	Merged fro branches.

2012-06-18  Sergio Martin <sergio.martin@artica.es>

	* include/functions_config.php: Cleaning the mess when 
	update setup fields. Now, looking the $sec2, only
	will be updated the fields of the current setup section
	In this way, set fields as empty value has been
	fixed
	Merged from 4.0.2

2012-06-18 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* index.php: Fixed global autorefresh bug.

2012-06-18 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_config.php
	 operation/users/user_edit.php
	 godmode/massive/massive_add_action_alerts.php
	 godmode/reporting/reporting_builder.php